# mongoose_issue_debug

./: .gitignore  Makefile  README.md  logfile.txt
src/: CMakeLists.txt
src/httpd/: CMakeLists.txt  index.html
src/mongoose/: CMakeLists.txt  mongoose_main.cpp  nonsense.h
